# superset-example

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md
.claude/: settings.json
docker/: docker-compose.tests.yml
docs/: README.md
docs/reference/: README.md  layout.md  overview.md  seeder.md  usage.md
docs/standards/: README.md  common-edits.md  configuration.md  gotchas.md  path-conventions.md
seed/: .dockerignore  .env.example  README.md  __init__.py  config.py  config.yml  db.py  init.py  pyproject.toml  requirements.txt
seed/core/: __init__.py  addresses.py  categories.py  customers.py  factories.py  orders.py  products.py  run.py  sellers.py  shipments.py  shipping.py  validate.py
seed/docker/: Dockerfile  docker-compose.yml
seed/enums/: __init__.py  customer.py  order.py  seller.py  shipping.py
seed/models/: __init__.py  address.py  base.py  category.py  customer.py  order.py  product.py  seller.py  shipment.py  shipping.py
seed/scripts/: run.sh
superset/: .env.example  README.md  requirements-local.txt  superset_config.py
superset/assets/: metadata.yaml
superset/assets/databases/: Test_MySQL.yaml
superset/assets/queries/: 01_revenue_by_state.sql  02_payment_method_mix.sql  03_top_sellers_by_gmv.sql  04_daily_revenue_trend.sql  05_order_status_distribution.sql  06_aov_by_acquisition_channel.sql  07_first_party_vs_marketplace.sql  08_avg_lead_time_by_state.sql  09_signup_cohort.sql  10_top_categories_by_units.sql  (+7 more)
superset/docker/: Dockerfile  docker-compose.yml
superset/scripts/: import-assets.py  run.sh
(+11 files in other folders)
